--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/maker-bundle": "^1.9",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "4.1.*",
+        "symfony/web-server-bundle": "4.1.*",
         "symfony/yaml": "4.1.*"
     },
     "require-dev": {
