--- a/.env
+++ b/.env
@@ -15,5 +15,5 @@ APP_SECRET=a10996088b083e4d5f9e834170b8fcfa
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://mazen_r:pic16F877@127.0.0.1:3306/symphart
+DATABASE_URL=mysql://mazen:pic16F877@127.0.0.1:3306/symphart
 ###< doctrine/doctrine-bundle ###
